라이브러리 추가
mui/x-charts
mui/x-date-pickers(dayjs 필요)
dayjs

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.9",
+    "@mui/material": "^5.14.10",
+    "@mui/x-charts": "^6.0.0-alpha.11",
     "axios": "^0.24.0",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
