--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@mui/x-charts": "^6.0.0-alpha.11",
+    "@mui/x-date-pickers": "^6.14.0",
     "axios": "^0.24.0",
     "dayjs": "^1.11.9",
     "react": "^18.2.0",
